--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
       <h2>A2261-BCG</h2>
       <p>A A2261-BCG situou-se a aproximadamente 3 bilhões de anos-luz da Terra. É elíptica em formato e foi encontrada pelo Telescópio Espacial Hubble. A A2261-BCG tem um diâmetro e um milhão de anos-luz.</p>
     </div>
-
   </main>
 </body>
+  <footer>
+    <div id="made">
+          Made with ♥ by <a href="https://github.com/gabspock" target="_blank">Gabspock</a>
+        </div>
+  </footer>
 </html>
